welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase:42: error: ambiguous reference to overloaded definition,
both method petale of type (c: java.awt.Color)Unit
and  method petale of type (c: java.awt.Color)Unit
match argument types (java.awt.Color)
  petale(Color.RED)
  ^FlowerCase:46: error: ambiguous reference to overloaded definition,
both method petale of type (c: java.awt.Color)Unit
and  method petale of type (c: java.awt.Color)Unit
match argument types (java.awt.Color)
  petale(Color.PINK)
  ^FlowerCase:49: error: ambiguous reference to overloaded definition,
both method petale of type (c: java.awt.Color)Unit
and  method petale of type (c: java.awt.Color)Unit
match argument types (java.awt.Color)
  petale(Color.GREEN)
  ^FlowerCase:52: error: ambiguous reference to overloaded definition,
both method petale of type (c: java.awt.Color)Unit
and  method petale of type (c: java.awt.Color)Unit
match argument types (java.awt.Color)
  petale(Color.CYAN)
  ^FlowerCase:56: error: ambiguous reference to overloaded definition,
both method petale of type (c: java.awt.Color)Unit
and  method petale of type (c: java.awt.Color)Unit
match argument types (java.awt.Color)
  petale(Color.ORANGE)
  ^FlowerCase:24: error: method petale is defined twice
  conflicting symbols both originated in file 'plm.runtime1.FlowerCase'
  def petale(c:Color){
      ^